Commiting new edited project

--- a/index.html
+++ b/index.html
@@ -14,56 +14,56 @@
 <body>
     <div id="container">
         <div id="masthead">
-            <h1>Links to make you look</h1>
+            <h1>Random links for a project</h1>
         </div>
         <div id="content-holder">
-            <h4>This is a subheading</h4>
+            <h4>Welcome to my project</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum.</p>
         </div>
-        <img id="trans-flower" src="images/trans-flower.png">
+        <img id="hot-dog" src="images/hot-dog-illustration-free-vector.png">
         <div id="links-block">
-            <h4>This is a links subheading</h4>
-            <a href="#">
-                <p>This is a link</p>
+            <h4>These are educational links in Norwich</h4>
+            <a href="https://norwichuni.ac.uk">
+                <p>Norwich University</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.cns-school.org/">
+                <p>City of Norwich School</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.uea.ac.uk/search/courses/">
+                <p>UEA</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.norwich-school.org.uk/">
+                <p>Norwich School</p>
             </a>
-            <h4>This is a links subheading</h4>
-            <a href="#">
-                <p>This is a link</p>
+            <h4>These are links for cat rescue services</h4>
+            <a href="https://www.cats.org.uk/find-us">
+                <p>Cats Protection</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.bluecross.org.uk/rehome/cat">
+                <p>Blue Cross</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.catchat.org/index.php">
+                <p>Cat Chat</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.pactsanctuary.org/cats-for-rehoming.html">
+                <p>Pact</p>
             </a>
-            <h4>This is a links subheading</h4>
-            <a href="#">
-                <p>This is a link</p>
+            <h4>These are links to learn HTML</h4>
+            <a href="https://www.codecademy.com/learn/learn-html">
+                <p>Codecademy</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://www.w3schools.com/html/">
+                <p>https://blog.hubspot.com/website/html</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="Hub Spot">
+                <p>Hub Spot</p>
             </a>
-            <a href="#">
-                <p>This is a link</p>
+            <a href="https://web.dev/learn/html/">
+                <p>Learn HTML</p>
             </a>
         </div>
 
